--- a/FourthWeekTask/pom.xml
+++ b/FourthWeekTask/pom.xml
@@ -7,18 +7,24 @@
     <groupId>java</groupId>
     <artifactId>FourthWeekTask</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <properties>
+        <surefire.plugin.version>2.20.1</surefire.plugin.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>2.15.0</version>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
-        </dependency>
+
         <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-junit</artifactId>
@@ -26,6 +32,77 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
+    <profiles>
+        <profile>
+           <id>equaltests</id>
+           <build>
+               <plugins>
+                   <plugin>
+                       <groupId>org.apache.maven.plugins</groupId>
+                       <artifactId>maven-surefire-plugin</artifactId>
+                       <version>2.12</version>
+                       <dependencies>
+                           <dependency>
+                               <groupId>org.apache.maven.surefire</groupId>
+                               <artifactId>surefire-junit47</artifactId>
+                               <version>2.12</version>
+                           </dependency>
+                       </dependencies>
+                       <configuration>
+                           <groups>Equaltriangle</groups>
+                       </configuration>
+                   </plugin>
+               </plugins>
+           </build>
+        </profile>
+
+        <profile>
+           <id>isoscelestests</id>
+           <build>
+               <plugins>
+                   <plugin>
+                       <groupId>org.apache.maven.plugins</groupId>
+                       <artifactId>maven-surefire-plugin</artifactId>
+                       <version>2.12</version>
+                       <dependencies>
+                           <dependency>
+                               <groupId>org.apache.maven.surefire</groupId>
+                               <artifactId>surefire-junit47</artifactId>
+                               <version>2.12</version>
+                           </dependency>
+                       </dependencies>
+                       <configuration>
+                           <groups>Isoscelestriangle</groups>
+                       </configuration>
+                   </plugin>
+               </plugins>
+           </build>
+        </profile>
+
+        <profile>
+           <id>rectangulartests</id>
+           <build>
+               <plugins>
+                   <plugin>
+                       <groupId>org.apache.maven.plugins</groupId>
+                       <artifactId>maven-surefire-plugin</artifactId>
+                       <version>2.12</version>
+                       <dependencies>
+                           <dependency>
+                               <groupId>org.apache.maven.surefire</groupId>
+                               <artifactId>surefire-junit47</artifactId>
+                               <version>2.12</version>
+                           </dependency>
+                       </dependencies>
+                       <configuration>
+                           <groups>Rectangulartriangle</groups>
+                       </configuration>
+                   </plugin>
+               </plugins>
+           </build>
+        </profile>
+    </profiles>
 
 </project>
 
